fix: auto scroll when content gets clipped

--- a/src/containers/Dashboard/Dashboard.css
+++ b/src/containers/Dashboard/Dashboard.css
@@ -2,7 +2,7 @@
   align-items: flex-start;
   background-color: var(--grey-200);
   justify-content: flex-start;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .disposition-section {
